--- a/manifest.yml
+++ b/manifest.yml
@@ -3,8 +3,8 @@ applications:
 - name: todos-processor
   memory: 1G
   routes:
-  - route: https://todos-processor.cfapps.io
+  - route: https://todos-processor.apps.retro.io
   path: target/todos-processor-1.0.0-SNAP.jar
-  buildpack: java_buildpack
+  buildpack: java_buildpack_offline
   services:
-  - rabbitmq
+  - todos-messaging
