--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,5 @@ spring:
                 input:
                     destination: todos
                 output:
-                    destination: todos-upper
+                    destination: todos-sink
 
